--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@tradle/validate-model": "^2.4.3",
     "@tradle/validate-resource": "^2.12.1",
     "deep-equal": "^1.0.1",
+    "object.omit": "^3.0.0",
+    "object.pick": "^1.3.0",
     "parse-data-uri": "^0.2.0"
   },
   "devDependencies": {
