--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   "author": "Mark Vayngrib <mark@tradle.io>",
   "license": "MIT",
   "dependencies": {
-    "@tradle/build-resource": "^2.9.1",
+    "@tradle/build-resource": "^2.11.0",
     "@tradle/constants": "^2.1.0",
     "@tradle/merge-models": "^2.1.0",
     "@tradle/validate-model": "^2.4.3",
     "@tradle/validate-resource": "^2.12.1",
+    "clone": "^2.1.1",
     "deep-equal": "^1.0.1",
     "object.omit": "^3.0.0",
     "object.pick": "^1.3.0",
