--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@tradle/custom-models": "github:tradle/custom-models",
     "@tradle/engine": "^5.4.0",
     "@tradle/models": "github:tradle/models",
+    "@types/node": "^8.0.51",
     "sinon": "^4.1.2",
     "source-map-support": "^0.5.0",
     "tape": "^4.8.0",
