--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,23 +3,19 @@
     "declaration": true,
     "module": "commonjs",
     "target": "es6",
-    "lib": [
-      "es6",
-      "es2017"
-    ],
     "moduleResolution": "node",
+    "lib": [
+      "esnext"
+    ],
     "sourceMap": true,
     "outDir": "lib",
     "baseUrl": ".",
-    "paths": {
-      "*": [
-        "node_modules/*",
-        "src/types/*"
-      ]
-    }
+    "typeRoots": [
+      "./node_modules/@types"
+    ]
   },
   "include": [
-    "src/**/*"
+    "src/**/*.ts"
   ],
   "exclude": [
     "node_modules"
