--- a/package.json
+++ b/package.json
@@ -12,15 +12,12 @@
   "author": "Mark Vayngrib <mark@tradle.io>",
   "license": "MIT",
   "dependencies": {
-    "@tradle/build-resource": "^2.11.0",
+    "@tradle/build-resource": "^2.14.1",
     "@tradle/constants": "^2.1.0",
     "@tradle/merge-models": "^2.1.0",
     "@tradle/validate-model": "^4.0.0",
     "@tradle/validate-resource": "^2.13.0",
-    "clone": "^2.1.1",
-    "deep-equal": "^1.0.1",
-    "object.omit": "^3.0.0",
-    "object.pick": "^1.3.0",
+    "lodash": "^4.17.4",
     "parse-data-uri": "^0.2.0"
   },
   "devDependencies": {
