--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "module": "commonjs",
     "target": "es6",
     "moduleResolution": "node",
+    "esModuleInterop": true,
     "lib": [
       "esnext"
     ],
