--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
     "baseUrl": ".",
     "typeRoots": [
       "./node_modules/@types"
-    ]
+    ],
+    "types": ["node"]
   },
   "include": [
     "src/**/*.ts"
